@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (C) 2000 - 2024 Silverpeas
+    Copyright (C) 2000 - 2026 Silverpeas
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU Affero General Public License as
@@ -225,6 +225,14 @@
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers-standard-package</artifactId>
     </dependency>
+    <!-- Apache POI 5.x logs through the Log4j API. It is excluded from POI by the dependencies
+         BOM as it is provided by the application server at runtime, so it has to be added back for
+         the unit tests exercising the POI-based extractors (e.g. MSGExtractor). -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>com.drewnoakes</groupId>
       <artifactId>metadata-extractor</artifactId>
@@ -289,7 +297,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <skipTests>false</skipTests>
-          <argLine>-XX:MaxPermSize=512m</argLine>
+          <argLine>-Xmx512m</argLine>
           <systemProperties>
             <property>
               <name>java.awt.headless</name>
